--- a/sass/elements/game/_missions.scss
+++ b/sass/elements/game/_missions.scss
@@ -1,4 +1,4 @@
-.missions {
+.tavern {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -67,13 +67,13 @@
             height: 30%;
             bottom: 0;
 
-            background: #11998e; /* fallback for old browsers */
-            background: -webkit-linear-gradient(to right, #38ef7d, #11998e); /* Chrome 10-25, Safari 5.1-6 */
+            background: #11998e; 
+            background: -webkit-linear-gradient(to right, #38ef7d, #11998e); 
             background: linear-gradient(
                 to right,
                 #38ef7d,
                 #11998e
-            ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            ); 
         }
     }
 }
