--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,3 +16,5 @@
 @import "./elements/game/friends";
 @import "./elements/game/inbox";
 @import "./elements/game/account";
+@import "./elements/game/travel";
+@import "./elements/game/monsterFight";
