--- a/sass/settings/_all.scss
+++ b/sass/settings/_all.scss
@@ -22,3 +22,14 @@ body{
 .disabled{
     display: none;
 }
+@keyframes an__gradient_background{
+    0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
