styles - monsterFight - characters

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,4 +18,4 @@
 @import "./elements/game/inbox";
 @import "./elements/game/account";
 @import "./elements/game/travel";
-@import "./elements/game/monsterFight";
+@import "./elements/game/fight";
