--- a/sass/elements/game/_fight.scss
+++ b/sass/elements/game/_fight.scss
@@ -26,6 +26,11 @@
         flex-direction: column;
         align-items: center;
         &-user {
+
+        }
+        &-monster{
+            position: relative;
+         //  animation: 0.8s an__monster_attack forwards;
         }
     }
     &__characterImg {
@@ -92,7 +97,7 @@
         width: 200px;
         height: 200px;
         transform: scale(0);
-        animation: 1.5s an__sword_attack forwards;
+        //animation: 1.5s an__sword_attack forwards;
     }
     &__explosion {
         transform: scale(0);
@@ -101,11 +106,11 @@
         width: 80%;
         height: auto;
         object-fit: cover;
-        animation: 0.5s 1s  an__attack_explosion forwards, 0.5s 1.5s  an__attack_explosion_shrink  forwards;
+        //animation: 0.5s 1s  an__attack_explosion forwards, 0.5s 1.5s  an__attack_explosion_shrink  forwards;
     }
     &__sword {
         z-index: 0;
-        animation: 0.5s 1s an__sword_attack_shrink forwards;
+        //animation: 0.5s 1s an__sword_attack_shrink forwards;
         position: absolute;
         top: 0;
         left: 0;
@@ -114,6 +119,53 @@
         object-fit: cover;
     }
 }
+
+.monster{
+    &__explosionWrapper{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 24%;
+        left: -200px;
+        width: 200px;
+        height: 200px;
+        border: 3px solid red;
+    }
+    &__explosionImg{
+        width: 70%;
+        height: auto;
+        object-fit: cover;
+        transform: scale(0%);
+        animation: 1s 0.8s an__monster_explosion_grow ;
+    }
+}
+@keyframes an__monster_attack {
+    100%{
+        transform: translateX(-630px);
+    }
+}
+@keyframes an__monster_explosion_grow {
+    50%{
+        transform: scale(100%);
+    }
+    100%{
+        transform: scale(0%);
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @keyframes an__sword_attack {
     30%{
