--- a/sass/elements/game/_fight.scss
+++ b/sass/elements/game/_fight.scss
@@ -11,7 +11,6 @@
         display: flex;
         position: relative;
         justify-content: space-between;
-        display: none;
     }
 
     &__characterWrapper {
@@ -60,9 +59,10 @@
     &__health {
         position: absolute;
         left: 0;
+        z-index: -1;
         top: 0;
         height: 100%;
-        width: 20px;
+        width: 100%;
         background: $color-green;
     }
     &__statsTable {
