--- a/sass/elements/game/_fight.scss
+++ b/sass/elements/game/_fight.scss
@@ -63,6 +63,7 @@
         height: 100%;
         width: 100%;
         background: $color-green;
+        transition: 0.3s;
     }
     &__statsTable {
         width: 100%;
