--- a/sass/elements/game/_searchFriends.scss
+++ b/sass/elements/game/_searchFriends.scss
@@ -1,20 +1,20 @@
-.searchFriend{
+.searchFriend {
     display: flex;
     height: 100%;
-    background-image: url('/images/background_search_friend.jpg');
-    background-size: 100% 100%; 
-    &__item{
+    background-image: url("/images/background_search_friend.jpg");
+    background-size: 100% 100%;
+    &__item {
         width: 50%;
-        &-search{
+        &-search {
             background: rgba(255, 255, 255, 0.5);
             border-right: 6px solid #343a40;
         }
-        &-result{
+        &-result {
             background: rgba(255, 255, 255, 0.5);
             padding: 10px;
         }
     }
-    &__searchBar{
+    &__searchBar {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -22,21 +22,20 @@
         box-sizing: border-box;
         padding: 10px 0;
     }
-    &__searchIcon{
+    &__searchIcon {
         height: 112%;
         background-color: $color-gold;
         box-sizing: border-box;
         border-radius: 50px;
         padding: 0.25rem;
         transform: translateX(2.188rem);
-        img{
+        img {
             width: auto;
-        height: 25px;
-        object-fit: cover;  
+            height: 25px;
+            object-fit: cover;
         }
-      
     }
-    &__input{
+    &__input {
         border: 3px solid $color-gold;
         outline: none;
         background: transparent;
@@ -47,66 +46,180 @@
         padding-left: 2.188rem;
         font-family: $fontFamily-kanit;
         font-size: 1.563rem;
-        &:focus{
+        &:focus {
             background: rgba(255, 255, 255, 0.4);
         }
     }
+    &__status {
+        margin-left: 20px;
+        height: 32px;
+        width: 146px;
+        background: $color-white;
+        display: flex;
+        align-items: center;
+        border-radius: 15px;
+        position: relative;
+        &::after{
+            content: '';
+            display: block;
+            height: 100%;
+            width: 40px;
+            position: absolute;
+            right: -10px;
+            background: $color-white;
+            clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+        }
+        img {
+            margin-left: -2px;
+        }
+        strong {
+            margin-left: 0.25rem;
+            font-weight: bold;
+            font-size: 1.438rem;
+            letter-spacing: 0.063rem;
+        }
+
+
+
+    }
+    &__nick {
+        margin-left: 20px;
+        height: 32px;
+        width: 344px;
+        background: $color-white;
+        display: flex;
+        align-items: center;
+        border-radius: 15px;
+        position: relative;
+        strong {
+            margin-left: 0.25rem;
+            font-weight: bold;
+            font-size: 1.438rem;
+            letter-spacing: 0.063rem;
+        }
+        &::after{
+            content: '';
+            display: block;
+            height: 100%;
+            width: 40px;
+            position: absolute;
+            right: -10px;
+            background: $color-white;
+            clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+        }
+        &::before{
+            z-index: 1;
+            content: '';
+            display: block;
+            height: 100%;
+            width: 40px;
+            position: absolute;
+            left: -15px;
+            background: $color-green;
+            clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+        }
+    }
+    &__level{
+        height: 100%;
+        min-width: 1.375rem;
+        padding: 0 0.375rem;
+        border-radius: 20px;
+        display: flex;
+        margin-left: -2px;
+        justify-content: center;
+        align-items: center;
+        background: $color-green;
+        color: $color-white;
+        font-weight: 600;
+        letter-spacing: 0.125rem;
+        font-size: 1.25rem;
+        text-shadow: 0.125rem 0.125rem $color-gray_dark;
+        position: relative;
+        z-index: 1;
+    }
+    &__lastVisit{
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        height: 32px;
+        width: 90%;
+        background: $color-white;
+        border-radius: 15px;
+        position: relative;
+        &::after{
+            content: '';
+            display: block;
+            height: 100%;
+            width: 40px;
+            position: absolute;
+            left: -3px;
+            background: $color-white;
+            clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+        }
+        img{
+            margin-right: -2px;
+        }
+    }
 }
-.searchFriend__list{
+.searchFriend__list {
     width: 100%;
     height: calc(100% - 50px);
     overflow-y: scroll;
     position: relative;
-    &::-webkit-scrollbar{
+    &::-webkit-scrollbar {
         width: 6px;
     }
     &::-webkit-scrollbar-thumb {
-       background-color: #473080;
-       border-radius: 3px;
+        background-color: #473080;
+        border-radius: 3px;
     }
-    table{
+    table {
         width: 100%;
     }
-    thead{
+    thead {
         border-bottom: 6px solid $color-blue;
-        th{
+        th {
             font-weight: bold;
             letter-spacing: 0.125rem;
-          font-size: 1.625rem;
-          border-right: 6px solid #343a40;
+            font-size: 1.625rem;
+            border-right: 6px solid #343a40;
         }
-        th:last-child{
+        th:last-child {
             border: none;
         }
     }
-    tbody{
+    tbody {
         font-size: 1.25rem;
-        tr{
+        tr {
             height: 2.5rem;
-           &:hover{
-               cursor: pointer;
-               border-bottom: 5px solid $color-gold;
-           }
+            &:hover {
+                cursor: pointer;
+                border-bottom: 5px solid $color-gold;
+            }
         }
-        td{
-            text-align: center; 
+        td {
+            text-align: center;
             vertical-align: middle;
         }
-    }
-    .status{
-
-         padding: 0 0.563rem;
-         border-radius: 20px;
-        &-online{
-             background: $color-green;
-             color: $color-white;
+        tr img{
+            height: 100%;
+            width: auto;
+            border-radius: 50%;
         }
-        &-offline{
+    }
+    .status {
+        padding: 0 0.563rem;
+        border-radius: 20px;
+        &-online {
+            background: $color-green;
+            color: $color-white;
+        }
+        &-offline {
             background: $color-red;
             color: $color-white;
         }
     }
-    .level{
+    .level {
         font-weight: 900;
         background: #473080;
         color: #27c1e6;
@@ -115,7 +228,7 @@
         padding: 0 0.563rem;
         border-radius: 20px;
     }
-    .nick{
+    .nick {
         font-weight: 900;
         background: $color-gold;
         padding: 0 0.563rem;
