--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -267,7 +267,7 @@
         letter-spacing: 0.063rem;
     }
     &__level {
-        z-index: -1;
+        z-index: 0;
         position: relative;
         display: flex;
         justify-content: center;
@@ -835,6 +835,12 @@
             bottom: -26px;
             clip-path: polygon(50% 100%, 0 0, 100% 0);
         }
+}
+#searched_user_root{
+    padding: 10px;
+    .profile__description{
+        z-index: 0;
+    }
 }
 @keyframes an__profile__item-notAfford {
     100% {
