--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -105,6 +105,7 @@
         grid-row: 3/4;
     }
     &__itemSpecs {
+        z-index: 10;
         padding: 10px;
         border-radius: 18px;
         width: 325px;
@@ -420,6 +421,10 @@
     &__general {
         display: flex;
         justify-content: space-between;
+        position: relative;
+        &-searchedUser{
+            margin-top: 10px;
+        }
     }
     &__generalItem {
         display: flex;
@@ -570,7 +575,7 @@
     }
 }
 .profile__generalLabelWrapper {
-    position: relative;
+    position: absolute;
 }
 #blacksmith_backpack_item_label,
 #blacksmith_equipment__item_label {
