logic - specificUser - potion label

--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -846,6 +846,9 @@
     .profile__description{
         z-index: 0;
     }
+    .potion__label-1{
+        transform: translate(50%, -100%);
+    }
 }
 @keyframes an__profile__item-notAfford {
     100% {
