logic - friends - rendering friends list

--- a/sass/settings/_all.scss
+++ b/sass/settings/_all.scss
@@ -5,6 +5,9 @@ body{
     font-family: 'Kanit', sans-serif;
     color: $color-black;
 }
+*{
+    box-sizing: border-box;
+}
 .transparent{
     &::after{
     content: "";
