--- a/sass/elements/game/_friends.scss
+++ b/sass/elements/game/_friends.scss
@@ -2,6 +2,13 @@
     height: 100%;
     background-image: url("/images/background_friends.jpg");
     background-size: 100% 100%;
+    display: flex;
+    &__itemWrapper{
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        flex-grow: 1;
+    }
     &__topBar {
         height: 47px;
         background: rgba(255, 255, 255, 0.3);
@@ -97,9 +104,15 @@
         }
     }
     &__list {
+        box-sizing: border-box;
         display: flex;
         flex-wrap: wrap;
-        padding: 22px;
+        padding: 22px 0;
+        height: calc(100% - 47px);
+        overflow: auto;
+        &::-webkit-scrollbar{
+            width: 0;
+        }
     }
     &__item{
         width: 25%;
@@ -107,20 +120,25 @@
         padding: 10px 0;
         display: flex;
         justify-content: center;
+        height: 422px;
+        &-active{
+            width: 50%;
+        }
     }
 }
 
 .friend{
     width: 80%;
+    height: 100%;
     background: rgba(255,255,255,0.4);
     position: relative;
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(2px);
     border-radius: 15px;
-    padding: 10px 0;
+    padding-top: 10px;
     transition: 0.2s;
+    overflow: hidden;
     &:hover{
-        backdrop-filter: blur(5px);
-        cursor: pointer;
+        backdrop-filter: blur(4px);
     }
   &__portraitWrapper{
       z-index: 3;
@@ -153,17 +171,39 @@
       align-items: center;
       margin-top: 0.5rem;
   }
-  &__levelIcon{
-      width: 2.625rem;
-      margin-left: 0.563rem;
-      margin-right: 0.625rem;
-      height: auto;
-      object-fit: cover;
+  &__actionBar{
+      box-sizing: border-box;
+      display: flex;
+      width: 100%;
+      height: 50px;
+      background: $color-gray-dark;
+      padding: 5px;
   }
-  &__level{
-      font-size: 20px;
-      font-weight: 900;
-      word-spacing: 0.375rem;
+  &__actionBtn{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50%;
+      height: 100%;
+      color: $color-white;
+      font-size: 1.563rem;
+      transition: 0.2s;
+      &:hover{
+          cursor: pointer;
+          letter-spacing: 0.125rem;
+      }
+      &-profile{
+        text-shadow: 0.125rem 0.125rem #e80054;
+      }
+      &-chat{
+        text-shadow:  0.125rem 0.125rem #fdd33a;
+      }
+  }
+  &__icon{
+    height: 100%;
+    width: auto;
+    object-fit: cover;
+    margin-right: 5px;
   }
 }
 
