--- a/sass/elements/game/_friends.scss
+++ b/sass/elements/game/_friends.scss
@@ -55,7 +55,7 @@
     }
 
     &__settingsWrapper {
-        width: 120px;
+        
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -65,18 +65,26 @@
         position: relative;
     }
     &__settingsIcon {
-        height: 80%;
+        height: 100%;
         width: auto;
         object-fit: cover;
+        margin-right: 10px;
         &:hover {
             cursor: pointer;
         }
     }
+    &__settingsTitle{
+        letter-spacing: 0.125rem;
+        font-size: 1.25rem;
+        font-weight: bold;
+        color: $color-white;
+        margin-bottom: 0.5rem;
+    }
     &__settingsForm {
-        display: none;
+    
         position: absolute;
         top: 81px;
-        right: 110px;
+        right: 70px;
         width: 314px;
         padding: 13px;
         box-sizing: border-box;
@@ -100,7 +108,7 @@
         }
 
         &-filter {
-            right: 27px;
+            right: 33px;
             border: 3px solid #ffdc00;
             width: 378px;
             &::after {
