general - foundations for chat

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,3 +19,4 @@
 @import "./elements/game/account";
 @import "./elements/game/travel";
 @import "./elements/game/fight";
+@import "./elements/game/chat";
