--- a/sass/elements/game/_chat.scss
+++ b/sass/elements/game/_chat.scss
@@ -37,10 +37,10 @@
         padding-top: 10px;
         height: calc(100% - 84px);
         overflow: auto;
-        &::-webkit-scrollbar{
+        &::-webkit-scrollbar {
             width: 3px;
         }
-        &::-webkit-scrollbar-thumb{
+        &::-webkit-scrollbar-thumb {
             background: $color-gold;
         }
     }
@@ -80,15 +80,21 @@
         object-fit: cover;
         z-index: 1;
     }
-    &__textareaWrapper {
+    &__messageWrapper {
         margin-left: -19px;
         width: 80%;
         height: 70%;
         position: relative;
         border-radius: 0 20px 20px 0;
+
+        img {
+            width: 20px;
+            height: 20px;
+            object-fit: cover;
+        }
     }
-    &__textarea {
-        border: 3px solid $color-gray_dark;
+    &__message {
+        background: $color-white;
         border-radius: 20px;
         outline: none;
         font-family: $fontFamily-kanit;
@@ -100,11 +106,17 @@
         line-height: 18px;
         display: block;
         overflow: hidden;
-        resize: auto;
+        resize: none;
         position: absolute;
         bottom: 0;
         max-height: 400px;
         padding: 5px 19px;
+        border: 2px solid $color-gray_dark;
+        &:hover {
+            
+            min-height: 100%;
+            height: auto;
+        }
     }
     &__btn {
         height: 27px;
@@ -126,14 +138,22 @@
             letter-spacing: 0.125rem;
         }
     }
-    &__emojiList{
+    &__emojiList {
         z-index: 2;
         width: 100%;
-        height: 400px;
         background: rgba(255, 255, 255, 0.4);
         position: absolute;
         transform: translateY(-100%);
         backdrop-filter: blur(4px);
+        display: flex;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        img{
+            width: auto;
+            margin: 0.375rem;
+            height: 1.75rem;
+            object-fit: cover;
+        }
     }
 }
 .message {
@@ -166,11 +186,11 @@
         width: 90%;
         display: flex;
         flex-direction: column;
-        &-friend{
+        &-friend {
             padding-left: 7px;
             align-items: flex-start;
         }
-        &-user{
+        &-user {
             padding-right: 7px;
             align-items: flex-end;
         }
@@ -179,26 +199,24 @@
         font-size: 1.063rem;
         font-weight: 600;
         letter-spacing: 0.063rem;
-        
     }
     &__cloud {
         max-width: 70%;
         letter-spacing: 0.063rem;
         word-spacing: 0.063rem;
-        padding: 12px;    
+        padding: 12px;
         &-friend {
             border-radius: 0 22px 22px 22px;
             color: $color-white;
-            background: $color-blue;  
+            background: $color-blue;
         }
-        &-user{
-            border-radius: 22px 0 22px  22px;
+        &-user {
+            border-radius: 22px 0 22px 22px;
             color: $color-white;
-            background: $color-blue;  
+            background: $color-blue;
         }
-        
     }
-    &__time{
+    &__time {
         text-align: center;
         font-size: 1.313rem;
         padding-bottom: 0.188rem;
