--- a/sass/elements/game/_chat.scss
+++ b/sass/elements/game/_chat.scss
@@ -86,12 +86,6 @@
         height: 70%;
         position: relative;
         border-radius: 0 20px 20px 0;
-
-        img {
-            width: 20px;
-            height: 20px;
-            object-fit: cover;
-        }
     }
     &__message {
         background: $color-white;
@@ -101,7 +95,7 @@
         font-weight: 600;
         height: 100%;
         width: 101%;
-        font-size: 1.063rem;
+        font-size: 1.188rem;
         letter-spacing: 0.063rem;
         line-height: 18px;
         display: block;
@@ -112,8 +106,15 @@
         max-height: 400px;
         padding: 5px 19px;
         border: 2px solid $color-gray_dark;
+
+        img {
+            display: inline-block;
+            width: 1.188rem;
+            height: 1.188rem;
+            object-fit: cover;
+            transform: translateY(0.188rem);
+        }
         &:hover {
-            
             min-height: 100%;
             height: auto;
         }
@@ -138,7 +139,7 @@
             letter-spacing: 0.125rem;
         }
     }
-    &__emojiList {
+    &__emojiContainer {
         z-index: 2;
         width: 100%;
         background: rgba(255, 255, 255, 0.4);
@@ -148,7 +149,7 @@
         display: flex;
         flex-wrap: wrap;
         align-content: flex-start;
-        img{
+        img {
             width: auto;
             margin: 0.375rem;
             height: 1.75rem;
