--- a/sass/elements/game/_chat.scss
+++ b/sass/elements/game/_chat.scss
@@ -1,7 +1,6 @@
 .chat {
     width: 100%;
     height: 100%;
-    background: $color-white;
     border-radius: 12px;
     overflow: hidden;
     &__topBar {
@@ -158,6 +157,7 @@
     }
 }
 .message {
+    margin-top: 0.5rem;
     display: flex;
     padding: 2px 10px;
     &__portraitWrapper {
@@ -187,6 +187,9 @@
         width: 90%;
         display: flex;
         flex-direction: column;
+        .message__message__cloud:first-child {
+          margin-top: 0;
+        }
         &-friend {
             padding-left: 7px;
             align-items: flex-start;
@@ -205,14 +208,24 @@
         max-width: 70%;
         letter-spacing: 0.063rem;
         word-spacing: 0.063rem;
-        padding: 12px;
+        padding: 0.75rem;
+        margin-bottom: 0.313rem;
+        font-size: 1.125rem;
+        div{
+            display: inline;
+        }
+        img{
+            width: 1.125rem;
+            height: 1.125rem;
+            object-fit: cover;
+        }
         &-friend {
-            border-radius: 0 22px 22px 22px;
-            color: $color-white;
-            background: $color-blue;
+            border-radius: 0 1.375rem 1.375rem 1.375rem;
+            color: $color-black;
+            background:$color-white ;
         }
         &-user {
-            border-radius: 22px 0 22px 22px;
+            border-radius: 1.375rem 0 1.375rem 1.375rem;
             color: $color-white;
             background: $color-blue;
         }
