--- a/sass/elements/game/_inbox.scss
+++ b/sass/elements/game/_inbox.scss
@@ -20,23 +20,35 @@
         align-items: center;
         border-bottom: 6px solid $color-gold;
     }
-    &__messageIcon {
+    &__mailIcon {
         height: 100%;
         width: auto;
         object-fit: cover;
         margin-right: 0.5rem;
     }
-    &__messageAmount {
+    &__mailAmount {
         font-size: 1.75rem;
         font-weight: 700;
     }
 
     &__list {
         margin-top: 10px;
+        li{
+            display: flex;
+            align-items: center;
+        }
+    }
+    &__deleteIcon{
+        margin: 0 0.5rem;
+        font-size: 1.625rem;
+        color: $color-error;
+        -webkit-text-stroke: 0.063rem $color-black;
+        i:hover{
+            cursor: pointer;
+        }
     }
     &__listItem {
         display: block;
-        margin: 2px auto;
         width: 90%;
         height: 68px;
         position: relative;
