--- a/sass/elements/game/_account.scss
+++ b/sass/elements/game/_account.scss
@@ -6,6 +6,7 @@
     background-image: url('/images/background_account.jpg');
     background-size: 100% 100%;
     &__item{
+        width: 441px;
         padding: 5px 10px;
         background: rgba(255, 255, 255, 0.5);
         backdrop-filter: blur(2px);
@@ -13,6 +14,7 @@
 
     }
     &__nick{
+        text-align: center;
         font-size: 44px;
         letter-spacing: 0.25rem;
         word-spacing: 0.188rem;
@@ -43,7 +45,7 @@
         }
     }
     &__elementContent{
-        width: 78%;
+        width: 85%;
         height: 50px;
         background: $color-white;
         transform: translateX(-15px);
@@ -85,8 +87,7 @@
         color: $color-white;
         border-radius: 50px;
         transform: scale(0%);
-        animation: 0.5s an__account_error forwards;
-        display: none;
+        animation: 0.5s an__account_scale forwards;
         &-error{
             background: $color-error;
         }
@@ -106,6 +107,8 @@
         transition: 0.2s;
         padding: 0.313rem 0;
         border: none;
+       
+
         &:hover{
             cursor: pointer;
             color: $color-gold;
@@ -113,9 +116,25 @@
             letter-spacing: 0.125rem;
         }
     }
+    &__succcessfullUpdate{
+        text-align: center;
+        width: 100%;
+        background-color: $color-green;
+        color: $color-white;
+        margin: 1.5rem 0;
+        font-size: 1.5rem;
+        font-weight: 500;
+        border-radius: 40px;
+        letter-spacing: 0.063rem;
+        transition: 0.2s;
+        padding: 0.313rem 0;
+        border: none;
+        transform: scale(0%);
+        animation: 1s an__account_scale forwards;
+    }
 }
 
-@keyframes an__account_error{
+@keyframes an__account_scale{
     100%{
         transform: scale(100%);
     }
