logic - friends - searching friend by nick

--- a/sass/elements/game/_searchFriends.scss
+++ b/sass/elements/game/_searchFriends.scss
@@ -41,7 +41,7 @@
         background: transparent;
         background: rgba(255, 255, 255, 0.3);
         border-radius: 50px;
-        width: 50%;
+        width: 381px;
         height: 100%;
         padding-left: 2.188rem;
         font-family: $fontFamily-kanit;
