--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -4,11 +4,15 @@
     display: flex;
     margin: 0 auto;
 }
-
+.game__contentContainer{
+    width: 80%;
+    height: 100%;
+    position: relative;
+}
 #game__view {
     overflow: hidden;
     height: 900px;
-    width: 80vw;
+    width: 100%;
     height: 100%;
 }
 .game__errorWrapper{
